# olzz7

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attack.cpp  damage.cpp  damage.h  damage_new.cpp  main.cpp  main1.cpp  test.cpp  unit.cpp  unit.h
3rd/json/nlohmann/: json_fwd.hpp
data/: explain.txt  generals.json  skill.json  tasks.json  temp.txt  unit.json  unit2.json
data/unit/: Camel Archers.json  Conquistadors.json  Dragoon.json  Elephant Archers.json  Frank Axemen.json  Genoese Shielded Crossbowmen.json  Heavy-Armored Assault Cavalry.json  Hussar.json  Imperial bow cavalry.json  Longbowmen.json  Mamluk Archers.json  Mongolian Raiders.json  Ravenna Elite Crossbowmen.json  Woad Raiders.json  Zhuge Battalion.json
